Add Open Graph and Twitter Card meta tags to index.html for improved social media sharing
- Added Open Graph meta tags to customize the embed appearance on platforms like Discord and Slack.
- Included Twitter Card meta tags for enhanced rich previews on Twitter/X.
- Updated descriptions and image references to align with project branding.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Borg UI</title>
+    <!-- Discord/Slack/OG Embed Meta Tags (Easily Configurable) -->
+    <!-- Set these values to customize your embed -->
+    <meta property="og:title" content="Borg UI" />
+    <meta property="og:description" content="A modern React + Vite UI kit for the Unimatrix. Change this description in index.html!" />
+    <meta property="og:image" content="/icon.png" /> <!-- Use a 512x512+ PNG or JPG for best results -->
+    <meta property="og:url" content="https://demo.unimatrix-01.dev/" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter Card (optional, for Twitter/X rich preview) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Borg UI" />
+    <meta name="twitter:description" content="A modern React + Vite UI kit for the Unimatrix. Change this description in index.html!" />
+    <meta name="twitter:image" content="/icon.png" />
   </head>
   <body>
     <div id="root"></div>
